2011-01-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/fspecial3.m

	- FSPECIAL3  Create predefined 3-dimensional filters.

2011-01-20  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_estimate_bias_field.m

	- Add input argument to select prescaling. Because using the TPS
	to interpolate all voxels can be rather slow, and the bias field
	is anyway a slow varying field, it's convenient to first quickly
	reduce the image size by A (using bilinear interpolation),
	interpolate the bias field in the smaller image with the TPS, and
	then expand to the original size. By default, A = 1.0 and no
	rescaling is used.

2011-01-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/scinrrd_estimate_bias_field.m

	- SCINRRD_ESTIMATE_BIAS_FIELD  Estimate MRI bias field.

	* FileFormatToolbox/scinrrd_index2world.m,
	FileFormatToolbox/scinrrd_world2index.m

	- The way indices and coordinates were computed was wrong. Offset
	gives the coordinates of the first voxel's vertex, not the voxel's
	centre. Now integer indices correspond to the voxels' centres.

2010-12-17  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_index2world.m,
	FileFormatToolbox/scinrrd_world2index.m

	- Roll back last change, it was not a bug. Rewrite help header to
	clarify the coordinate and index order.

2010-12-14  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_index2world.m,
	FileFormatToolbox/scinrrd_world2index.m

	- Fix bug. The x,y coordinates (and, correspondingly, the j, i
	indices) were being operated with the wrong spacing and limit
	values. For example, the x-coordinate was being operated with the
	dy spacing. Now this has been fixed.

2010-07-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_load.m

	- Give error if the data is compressed.

	- If ElementDatafile is LOCAL, then raw data is in the file, not
	an external one.
